# QoSTestFramework

./: .gitignore  README.md  analysis.py
QOSserver/: conf.json  package.json  qosServer.js  qostestframework.html  qostestframework_summary.html
QOSserver/cert/: cert.pem
QOSserver/js/: stat.js  statAll.js  util.js
QOSserver/python/: listFolder.py
QOStestclient/: CMakeLists.txt  README  conferenceforwardobserver.cc  conferencesample.cc  data.cc  fileframegenerator.cc  http.cc  http.h  log.cc  myvideorenderer.h  videorenderer.cc  videorenderer.h
QOStestclient/scripts/: build.sh  config.json  runQosClient.py
analysis/: .gitignore
analysis/dataset/Data/: README.md
analysis/dataset/output/: README.md
analysis/dataset/source/: README.md
analysis/native/: README.md  makefile
analysis/native/src/: FLR.cpp  bitrate.cpp  fps.cpp  generate_recieved_yuv.cpp  generate_send_yuv.cpp  imagequality_yuv_dl.cpp  latency.cpp
analysis/python/: NR_calculate.py  freeze_ratio.py
mcu-bench_cpp/: .gitignore  basicServer.js  basicServer_andorid_conference.js  basicServer_summary.js  core  nuve.js  package-lock.json  package.json  qosServer.js  qosServer_android_p2p.js  qosServer_seperate.js  readme.md  rest.js  rtcandroidmcubench.html  rtcmcubench.html  rtcmcubench_summary.html  rtcp2pbench.html
mcu-bench_cpp/QOSserver/: .eslintrc.json  .jsbeautifyrc  cipher.js  conf.json  package.json  qosServer.js  qosServer_withJS.js  qostestframework.html  qostestframework_summary.html  rtcmcubench_summary.html  rtcmcubench_withoutjs.html
mcu-bench_cpp/QOSserver/cert/: key.pem
mcu-bench_cpp/QOSserver/js/: stat.js  statAll.js  stat_c.js  util.js
mcu-bench_cpp/QOSserver/python/: display_data.py  getPublishFile.py  listFile.py  listFolder.py
mcu-bench_cpp/QOStestclient/: CMakeLists-render.txt  CMakeLists.txt  OLD_README  README  basicserverConnector.cc  basicserverConnector.h  conferenceforwardobserver.cc  conferenceforwardobserver.h  conferencesample.cc  conferencesampleforwardobserver.cc  conferencesampleforwardobserver.h  conferencesampleobserver.cc  conferencesampleobserver.h  data.cc  data.h  directvideodecoder.cc  directvideodecoder.h  directvideoencoder.cc  directvideoencoder.h  encodedframegenerator.cc  encodedframegenerator.h  fileaudioframegenerator.h  fileframegenerator.cc  fileframegenerator.h  h264.sh  log.cc  log.h  myVideoRenderer.cc  myVideoRenderer.h  myvideorenderer.cc  myvideorenderer.h  owt.h
mcu-bench_cpp/QOStestclient/include/: asio_token.h
mcu-bench_cpp/QOStestclient/include/ics/base/: deviceutils.h
mcu-bench_cpp/QOStestclient/libs/: libasiotoken.so.1  libboost_system.so.1.67.0  libcrypto.so.1.0.0  libcrypto.so.1.1  libsioclient.so.1  libsioclient_tls.so.1.6.0  libssl.so.1.0.0  libssl.so.1.1
mcu-bench_cpp/QOStestclient/libs/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
mcu-bench_cpp/QOStestclient/scripts/: automationScript.sh  build.sh  config.json  h264.sh  runQosClient.py  vp8.sh  vp8_js.sh
mcu-bench_cpp/analysis/: core
mcu-bench_cpp/analysis/ml/: deploy.prototxt  tag.txt
mcu-bench_cpp/analysis/native/: README.md  install_opencv.sh  makefile
mcu-bench_cpp/analysis/python/: NR_calculate.py  vmaf_calculate.py
mcu-bench_cpp/analysis/src/: bitrate.cpp  convert.cpp  imagequality_yuv_android.cpp  imagequality_yuv_dl.cpp  latency_android.cpp  saveImage.cpp
mcu-bench_cpp/analysis/training/: deploy.py
mcu-bench_cpp/audio_test/: generate_audio.py  generate_pesq.py  useful_command
mcu-bench_cpp/audio_test/scripts/: generate_audio.py  generate_no_slience_send.py  generate_pesq.py
mcu-bench_cpp/css/: style.css
mcu-bench_cpp/doc/: Readme  Readme_TestVideo  Readme_android  Readme_docker  qos-bench.pptx
mcu-bench_cpp/docs/: InstallGuide  Readme_TestVideo  thirdpartylicense.txt
mcu-bench_cpp/js/: adapter.js  main.js  stat.js  statAll.js  stat_android.js  stat_c.js  testfunction.js
mcu-bench_cpp/native/: .gitignore  README.md  makefile
mcu-bench_cpp/native/src/: FLR.cpp  FLR_android.cpp  bitrate_android.cpp  fps.cpp  fps_android.cpp  imagequality_avi_dl.cpp  imagequality_yuv_android.cpp  imagequality_yuv_dl.cpp  saveImage.cpp
mcu-bench_cpp/network_emulator/: .emulate.py.swp  .network_emulator.py.swp  command.sh  emulate.py  network_emulator.py
mcu-bench_cpp/preprocess/encodedVideoGenerateScripts/: genTestStream  mkMCUTestStream.py
mcu-bench_cpp/preprocess/videoTag/: makefile
mcu-bench_cpp/public/: ics.js  index.html  script2.js  woogeen.sdk.js  woogeen.sdk.ui.js
mcu-bench_cpp/python/: NR_calculate.py  androidtime.py  config.py  display_data.py  getAndroidDevices.py  getPublishFile.py  getcasename.py  listFile.py  listFolder.py  lockserver.py  runqos.py  vmaf_calculate.py
mcu-bench_cpp/shell/: runconference.sh  runp2p.sh  setconfig.sh
mcu-bench_cpp/videoGenerateScripts/: Makefile  genStreams.sh  genTestStream.cpp  mkMCUTestStream.py  mkMCUTestStream_tag.py  mkMCUTestStream_tag_key.py  run.sh
preprocess/encodedVideoGenerateScripts/: Makefile  compile_ffmpeg.sh  genStreams.sh  genTestStream.cpp  mkTestStream.py  run.sh
(+22 files in other folders)
